src/components/Home.styles.scss
.home-wrapper {
    color: var(--white);
    display: flex;
    flex-direction: column;
    height: fit-content;
    align-items: center;

    .inner-container {
        width: 100%;
        height: 40rem;
        background-image: url('images/vegetables-white.jpg');
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;

        .hero-text-wrapper {
            width: 100%;
            height: 100%;
            background-color: rgba(black, 0.25);
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;

            .main-heading {
                font-size: 5rem;
                font-weight: 900;
                text-align: center;
                text-transform: uppercase;
                color: var(--white);
                line-height: 1.2;
            }
    
            .text-carousel {
                display: flex;
                flex-direction: column;
                align-items: center;
                margin-top: 10px;
                height: 7rem;
                overflow-y: hidden;
        
                .animation-container {
                    background-color: transparent;
                    translate: none;
                    rotate: none;
                    scale: none;
                    animation: 4s ease-in-out infinite slide;
        
                    div {
                        width: 17rem;
                        font-size: 4rem;
                        text-align: center;
                        border-radius: 10px;
                        margin: 2rem 0;
                        color: var(--white);
                        font-weight: 700;
                    }
            
                    div:nth-child(1) {
                        background-color: var(--lighter-green-outline);
                    }
            
                    div:nth-child(2) {
                        background-color: var(--mustard);
                    }
            
                    div:nth-child(3) {
                        background-color: var(--light-purple);
                    }
            
                    div:nth-child(4) {
                        background-color: var(--baby-blue);
                    }
                }
            }

            .main-heading,
            .text-carousel {
                margin-left: 2rem;
            }
        }

    }

    .recipes-container {
        width: 80%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        margin-top: 2rem;
        color: var(--pastel-blue);
        padding-bottom: 2rem;

        h2 {
            font-size: 2rem;
            text-transform: uppercase;
            color: var(--very-dark-grey);
            font-weight: 400;
            text-align: center;
            align-self: flex-start;
        }

        .recipes-wrapper {
            display: flex;
            flex-direction: row;
            gap: 2rem;
            margin-top: 1rem;
            width: 100%;
        }
    }
}

@media screen and (max-width: 1200px) {
    .home-wrapper {
        padding: unset;
        height: fit-content;

        // .inner-container {
        //     width: 100%;
        //     border-radius: unset;
        // }
        .recipes-container {
            .recipes-wrapper {
                flex-direction: column;
                align-items: center;

                .recipe-item-container {
                    width: 100%;
                    height: 25rem;
                    position: relative;
                    border-radius: 10px;
                    overflow: hidden;
                    
                    .image-wrapper {
                        height: 100%;
                        border-radius: 10px;
                        overflow: hidden;
                    }

                    .details-wrapper {
                        height: 0;

                        h2 {
                            position: absolute;
                            bottom: 0%;
                            left: 0%;
                            background-color: rgba(black, 0.45);
                            width: 100%;
                            text-align: start;
                            padding: 1rem;
                            color: var(--white);
                            font-size: x-large;
                            letter-spacing: 2px;
                        }

                        p {
                            display: none;
                        }
                    }

                }
            }
        }
    }
}

// @media screen and (max-width: 600px) {
//     .home-wrapper {
//         .inner-container {
//             .recipes-wrapper {
//                 padding: unset;
        
//                 .recipe-item-container {
//                     width: 90%;
//                 }
//             }
//         }
//     }
// }

@keyframes slide {
    0% {
        transform: translate(0%, -6%) translate3d(0px, 0px, 0px);
    }
    
    25% {
        transform: translate(0%, -29%) translate3d(0px, 0px, 0px);
    }
    
    50% {
        transform: translate(0%, -52%) translate3d(0px, 0px, 0px);
    }

    100% {
        transform: translate(0%, -75%) translate3d(0px, 0px, 0px);
    }
}

